# win95-keygen

./: .gitignore  CMakeLists.txt  README.md  build.sh  cl_args.cpp  cl_args.hpp  key95.cpp  key95.h  key95.hpp  main.cpp  shared_utils.cpp  shared_utils.h  shared_utils.hpp
